[package]
name = "tzpkg"
version = "0.1.0"
authors = ["Charles Cunningham <c.a.cunningham6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
surf = { version = "2.1", default-features = false, features = ["encoding", "h1-client", "middleware-logger"] }
async-std = { version = "1.8", features = ["attributes"] }
bs58 = { version = "0.4", features = ["check"] }
blake2 = "0.9"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
