[package]
name = "tzpkg"
version = "0.1.0"
authors = ["Charles Cunningham <c.a.cunningham6@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
async-std = { version = "1.8", features = ["attributes"] }
bs58 = { version = "0.4", features = ["check"] }
blake2 = "0.9"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
keysd_rs = "0.1"
tezos_api = { path = "libs/tezos_api" }
async-trait = "0.1"

